--- a/pages/1.html
+++ b/pages/1.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <p>I went to the Sunshine Company and sent Mr.Sunshine to the outer space and saved Aunt Sallyko's baby.</p>
+    <p>I went to the Sunshine Company and sent Mr.Sunshine to the <a href="2.html">outer space</a> and saved Aunt Sallyko's baby.</p>
 
   </body>
-</html>>
+</html>
